--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "stellar-suite",
-	"version": "1.0.0",
-	"description": "Be suitable stellar library made by ayanasu co.",
+	"version": "0.1.0",
+	"description": "Useful libarary wrapped of js-stellar-sdk. very easy, useful",
 	"main": "dist/index.js",
 	"private": true,
 	"scripts": {
