--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: node_js
 node_js:
 - stable
 branches:
-  only: 
+  only:
     - main
+    - master
+    - stable
 install:
 - npm install
 script:
