--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-	"name": "stellar-suite",
-	"version": "0.14.0",
-	"description": "Useful libarary wrapped of js-stellar-sdk. very easy, useful",
-	"main": "dist/index.js",
-	"scripts": {
-		"clean": "rm -rf dist",
-		"build": "tsc && webpack --config webpack.config-dev.js",
-		"build.prd": "tsc && webpack --config webpack.config.js",
-		"test": "jest --runInBand --detectOpenHandles --no-cache",
-		"postinstall": "npm run build.prd"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@github.com/fukaoi/stellar-suite.git"
-	},
-	"keywords": [
-		"common",
-		"lib",
-		"blockchain",
-		"stellar",
-		"js-stellar-sdk"
-	],
-	"author": "fukaoi",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/fukaoi/stellar-suite/issues"
-	},
-	"homepage": "https://github.com/fukaoi/stellar-suite#readme",
-	"dependencies": {
-		"awesome-typescript-loader": "^5.2.1",
-		"stellar-sdk": "^6.0.0",
-		"ts-loader": "^8.0.9",
-		"ts-node": "^9.0.0",
-		"typescript": "^4.0.5",
-		"web3-bzz": "^1.3.0",
-		"webpack": "^4.42.1",
-		"webpack-cli": "^3.3.11",
-		"webpack-merge": "^4.2.2"
-	},
-	"devDependencies": {
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.19.3",
-		"jest": "^26.6.3",
-		"jest-cli": "^26.6.3",
-		"ts-jest": "^26.4.3"
-	}
+  "name": "stellar-suite",
+  "version": "0.15.0",
+  "description": "Useful libarary wrapped of js-stellar-sdk. very easy, useful",
+  "main": "dist/index.js",
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "tsc && webpack --config webpack.config-dev.js",
+    "build.prd": "tsc && webpack --config webpack.config.js",
+    "test": "jest --runInBand --detectOpenHandles --no-cache",
+    "postinstall": "npm run build.prd"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/fukaoi/stellar-suite.git"
+  },
+  "keywords": [
+    "common",
+    "lib",
+    "blockchain",
+    "stellar",
+    "js-stellar-sdk",
+    "sdk"
+  ],
+  "author": "fukaoi",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fukaoi/stellar-suite/issues"
+  },
+  "homepage": "https://github.com/fukaoi/stellar-suite#readme",
+  "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "stellar-sdk": "^6.0.0",
+    "ts-loader": "^8.0.9",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
+    "web3-bzz": "^1.3.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.19.3",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "ts-jest": "^26.4.3"
+  }
 }
